# petrophysics-project

./: .gitignore  .replit  FLASK_IMPLEMENTATION_SUMMARY.md  HOW_TO_UPLOAD_LAS.md  LAS_UPLOAD_LOGGING.md  SETUP.md  app.py  design_guidelines.md  dev.ps1  dev.sh  drizzle.config.ts  main.py  package-lock.json  package.json  production.sh  pyproject.toml  replit.md  start.sh  test_flask_visualization.py  vite.config.ts
client/: index.html
client/src/: App.tsx  index.css
flask/: app.py  routes.py
flask/utils/: CPI.py  Data_Import_Export.py  LogPlot.py  (+7 more)
server/: flask_well_manager.py  index.ts  routes.ts  run_flask.py
server/petro-python-reference/: CPI.py  Generate_Excel_Report.py  Listen_Execute.py  LogPlot.py  NLP.py  NLP1.py  Project_Manager.py  Style_Themes.py  Test_Email.py  Utility.py  alias.py  app.py  constants_widget.py  custom_dock_widget.py  custom_dock_widget_pyside.py  custom_object.py  data_browser_dock_widget.py  data_browser_not_in_use.py  database_script.py  efacies.py  email_script.py  fe_data_objects.py  fe_data_objects_old.py  feedback_dock_widget.py  feedback_manager.py  geolog_reports_dock_widget.py  geolog_reports_utilities.py  log_info.py  logplotclass.py  logs_widget.py  logvalues_widget.py  main.py  mainwindow.py  mainwindow_pyside6.py  matplotlib_widget.py  minerals.py  plotclass.py  pyproject.toml  send_email.py  test.py  (+11 more)
server/petro-python-reference/10-WELLS/: well_log_02.las
server/petro-python-reference/Geological_Data/: minerals.csv
server/petro-python-reference/Utilities/: dirfiles.py  utilities1.py
test-data/: sample-wells.csv
(+126 files in other folders)
