[project]
name = "felib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.2.0",
    "dataset>=1.6.2",
    "lasio>=0.32",
    "matplotlib>=3.10.6",
    "openpyxl>=3.1.5",
    "pip>=25.2",
    "pyside6>=6.9.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
]
